--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "name": "rudra-home-furniture",
   "version": "1.0.0",
   "type": "module",
-
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "convex": "^1.31.7",
     "lucide-react": "^0.536.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.9.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.7.0",
